opam-version: "1.2"
name: "libbitcoin"
version: "1.0"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/bs_api"
doc: "https://vbmithr.github.io/ocaml-libbitcoin/doc"
license: "ISC"
dev-repo: "https://github.com/vbmithr/ocaml-libbitcoin.git"
bug-reports: "https://github.com/vbmithr/ocaml-libbitcoin/issues"
tags: []
available: [ ocaml-version >= "4.03.0" ]
depends: [
  "jbuilder" {build & >= "1.0+beta6"}
  "base" {build}
  "stdio" {build}
  "configurator" {build}
  "ctypes" {>= "0.11.3"}
  "base58"
]
build: [ "jbuilder" "build" "@install" ]